--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=753951+456
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.main.web-application-type=none
+#spring.main.web-application-type=none
 #spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+server.port=9090
+#server.error.whitelabel.enabled=false
+
+
+
+#spring.jpa.open-in-view=false
